test secrets and env var.

--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -18,3 +18,9 @@ jobs:
 
           - name: cat swapi.html
             run: cat swapi.html 
+
+          - name: Display a secret
+            run: echo "Hello, ${{secrets.DBPASSWORD}}"
+
+          - name: Display a variable
+            run: echo "Hello, ${{env.MYFATHER}}!"
